BG Picture Changed

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: "About"
 description:
-header-img: "img/post-bg-building.jpg"
+header-img: "img/blog-bg-tree.jpg"
 multilingual: true
 ---
 
