--- a/archive.html
+++ b/archive.html
@@ -1,7 +1,7 @@
 ---
 title: Archive
 layout: default
-description: keep hungry keep foolish
+description: Share & Discuss
 header-img: "img/blog-bg-temple.jpg"
 ---
 
